feat: adjustment new schema uuid
